--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ pages:
   script:
     - npm ci
     - npm run build
+    - mv public public-vue
+    - mv dist public
   artifacts:
     paths:
       - public
